--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,12 +9,12 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Executables/Deadshade/deadshade_v0-2.exe"
+export_path="../Executables/Deadshade/deadshade_v0-3.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
 seed=0
-encrypt_pck=false
+encrypt_pck=true
 encrypt_directory=false
 script_export_mode=2
 
