--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,19 +3,19 @@
 name="Windows Desktop"
 platform="Windows Desktop"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Executables/Deadshade/deadshade_v0-7.exe"
+export_path="../_Executables/Deadshade/deadshade_v0-8.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
 seed=0
 encrypt_pck=true
-encrypt_directory=false
+encrypt_directory=true
 script_export_mode=2
 
 [preset.0.options]
@@ -34,13 +34,13 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon=""
-application/console_wrapper_icon=""
+application/icon="res://icon.ico"
+application/console_wrapper_icon="res://icon.ico"
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
 application/company_name=""
-application/product_name=""
+application/product_name="Deadshade"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
