--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,7 +3,7 @@
 name="Windows Desktop"
 platform="Windows Desktop"
 runnable=true
-advanced_options=true
+advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
@@ -15,7 +15,7 @@ encryption_include_filters=""
 encryption_exclude_filters=""
 seed=0
 encrypt_pck=true
-encrypt_directory=true
+encrypt_directory=false
 script_export_mode=2
 
 [preset.0.options]
